# sqs-dispatch

./: README.md  pyproject.toml
sqs-dispatch/: cli.py  command.py  queue.py  worker.py
sqs_dispatch/: __main__.py  cli.py  command.py  metrics.py  queue.py  queue_.py  worker.py
tests/unit/: test_command.py
