[tool.poetry]
name = "sqs-dispatch"
version = "0.1.0"
description = ""
authors = ["Ray Hilton <ray@wirestorm.net>"]

[tool.poetry.dependencies]
python = "^3.8"
aiobotocore = "^2.4.0"
types-aiobotocore = {extras = ["essential"], version = "^2.4.0"}
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sqs-dispatch = "sqs-dispatch.cli:main"